--- a/Simple/Simple.csproj
+++ b/Simple/Simple.csproj
@@ -32,9 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentData, Version=3.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentData.3.0.1.0\lib\FluentData.dll</HintPath>
-    </Reference>
     <Reference Include="MySql.Data, Version=6.9.11.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.6.9.11\lib\net45\MySql.Data.dll</HintPath>
     </Reference>
@@ -61,6 +58,10 @@
     <ProjectReference Include="..\FluentDataWrapper\FluentDataWrapper.csproj">
       <Project>{01c3d2a3-02ec-4d0c-815c-a169672f6b0e}</Project>
       <Name>FluentDataWrapper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FluentData\FluentData.csproj">
+      <Project>{562b5678-c589-4df5-bebb-9ba1cee5bf76}</Project>
+      <Name>FluentData</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
