--- a/Simple/App.config
+++ b/Simple/App.config
@@ -7,6 +7,7 @@
   <connectionStrings>
     <add name="mySql_dataMenu" connectionString="server=192.168.0.213;database=mj_log;uid=root;pwd=B85Jqcy7EZT^2CT;charset=utf8" />
     <add name="mj_cardshop_statistics" connectionString="server=192.168.0.213;database=mj_cardshop;uid=root;pwd=B85Jqcy7EZT^2CT;charset=utf8" />
+    <add name="newpartner_statistics" connectionString="server=192.168.0.213;database=newpartner;uid=root;pwd=B85Jqcy7EZT^2CT;charset=utf8" />
 
     <add name="mySql_localhost_mj_log" connectionString="server=localhost;database=mj_log;uid=root;pwd=r123456;charset=utf8" />
 
